<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instructions.InstructionsFragment">

        <!-- this layout is simple with two textviews and a button, hence linear layout has been used -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="@string/shoe_store_inventory_instructions"
                app:titleTextColor="@color/white"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <TextView
                android:id="@+id/instructions_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textAlignment="center"
                style="@style/welcome_style" />

            <TextView
                android:id="@+id/add_instructions_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_instructions"
                android:textAlignment="center"
                style="@style/welcome_style" />

            <Button
                android:id="@+id/shoe_list_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_to_shoe_list"
                android:backgroundTint="@color/blue_2"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:letterSpacing="0.2"
                android:lineSpacingMultiplier="1.4"
                android:padding="20dp"
                android:layout_margin="10dp" />


        </LinearLayout>


    </ScrollView>
</layout>