<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">
<!-- this layout is simple with two textviews, two edittexts and two buttons, hence linear layout in used
 with orientation vertical-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/shoe_store_inventory_login"
                app:titleTextColor="@color/white" />


            <TextView
                android:id="@+id/email_tv"
                style="@style/login_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/blue_1" />


            <EditText
                android:id="@+id/email_et"
                style="@style/login_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/blue_1" />

            <TextView
                android:id="@+id/password_tv"
                style="@style/login_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/blue_1" />


            <EditText
                android:id="@+id/password_et"
                style="@style/login_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/blue_1" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/blue_2"
                android:letterSpacing="0.2"
                android:padding="20dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/blue_2"
                android:letterSpacing="0.2"
                android:padding="20dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </LinearLayout>
    </ScrollView>
</layout>